--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=5" />
 
-    <link rel="icon" href="images/devchallenges.png" />
+    <link rel="icon" href="../images/devchallenges.png" />
 
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
@@ -26,32 +17,29 @@
 
     <link rel="stylesheet" href="input.css" />
 
+    <script defer src="script.js"></script>
+
     <title>Devchallenges</title>
   </head>
-  <body
-    class="max-w-5xl mx-auto font-sans font-normal text-text p-3 min-h-screen flex flex-col"
-  >
+  <body class="max-w-5xl mx-auto font-sans font-normal text-text p-3 min-h-screen flex flex-col">
     <header class="py-10">
       <div class="text-center">
-        <div
-          class="w-28 h-28 sm:w-40 sm:h-40 rounded-xl overflow-hidden mx-auto"
-        >
+        <div class="w-28 h-28 sm:w-40 sm:h-40 rounded-xl overflow-hidden mx-auto">
           <img
-            src="https://source.unsplash.com/random/500x500?profile,girl,woman,actress,indian-girl,love,kiss"
+            src="https://source.unsplash.com/random/500x500?profile,girl,gym-girl,astrolger,woman,actress,indian-girl,love,kiss"
             alt="profile"
             class="object-cover w-full"
           />
         </div>
-        <h1 class="text-title sm:text-title-lg mt-3">Vedika Kamane</h1>
+        <h1 id="name" class="text-title sm:text-title-lg mt-3">Vedika Kamane</h1>
         <p
+          id="address"
           class="mt-2 sm:mt-3 text-muted text-secondary sm:text-secondary-lg font-normal"
         >
           Pune, Maharashtra
         </p>
 
-        <div
-          class="flex gap-3 justify-center mt-3 sm:mt-6 text-primary sm:text-primary-lg"
-        >
+        <div class="flex gap-3 justify-center mt-3 sm:mt-6 text-primary sm:text-primary-lg">
           <div
             class="w-20 h-14 sm:w-28 md:h-20 bg-light-gray rounded-xl flex justify-center items-center flex-col"
           >
@@ -116,10 +104,7 @@
         >vatsalsinghkv</a
       >
       -
-      <a
-        href="https://devchallenges.io/"
-        class="hover:text-blue-400"
-        target="_blank"
+      <a href="https://devchallenges.io/" class="hover:text-blue-400" target="_blank"
         >devChallenges.io</a
       >
     </footer>
